--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "asciify-image": "^0.1.10",
     "axios": "^1.12.2",
     "chalk": "^4.1.2",
     "commander": "^14.0.1",
