--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 CANVAS_TOKEN=your_canvas_token_here
 CANVAS_URL=https://canvas.instructure.com
+CANVAS_DEFAULT_DAYS=3
+CANVAS_WEEK_VIEW_WEEKS=1
+CANVAS_WEEK_START=sunday
